; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c___tl_raw_msg_conn_copy_through.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c___tl_raw_msg_conn_copy_through.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TL_IN_RAW_MSG = common dso_local global i32 0, align 4
@__m_to_conn = common dso_local global i32 0, align 4
@TL_OUT_CONN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @__tl_raw_msg_conn_copy_through to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__tl_raw_msg_conn_copy_through(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %2
  %8 = load i32, i32* @TL_IN_RAW_MSG, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @__m_to_conn, align 4
  %11 = load i32, i32* @TL_OUT_CONN, align 4
  %12 = call i32 @rwm_process_and_advance(i32 %8, i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = icmp eq i32 %12, %13
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  br label %27

17:                                               ; preds = %2
  %18 = load i32, i32* @TL_IN_RAW_MSG, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @__m_to_conn, align 4
  %21 = load i32, i32* @TL_OUT_CONN, align 4
  %22 = call i32 @rwm_process(i32 %18, i32 %19, i32 %20, i32 %21)
  %23 = load i32, i32* %3, align 4
  %24 = icmp eq i32 %22, %23
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert(i32 %25)
  br label %27

27:                                               ; preds = %17, %7
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @rwm_process_and_advance(i32, i32, i32, i32) #1

declare dso_local i32 @rwm_process(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
